# OpenGL_c-_stuff

./: CMakeLists.txt  Excersices1.cpp  main.cpp  main_old_withtexture.txt  notes.txt  notes_new_opengl_math.txt
Header Files/: Camera.h  EBO.h  Texture.h  VAO.h  VBO.h  shaderclass.h
Libraries/Include/glad/: glad.h
Resources/Shaders/: default.vert  orange.frag  red.frag
Source Files/: Camera.cpp  EBO.cpp  VAO.cpp  VBO.cpp  glad.c  shaderclass.cpp  stb.cpp  texture.cpp
